Adds styles to the navbar

--- a/InfoSphere/src/styles/Header.css
+++ b/InfoSphere/src/styles/Header.css
@@ -2,9 +2,16 @@
     background-color: rgb(213, 167, 97);
     display: flex;
     align-items: center;
-    margin: 2px;
+    height: 25vh;
 }
 
 .header img {
-    width: 30%;    
+    width: 15%;
+  
+}
+
+.header h1 {
+    font-size: 3rem;
+    color: rgb(44, 33, 75);
+    font-weight: bold;
 }
