--- a/InfoSphere/src/styles/Footer.css
+++ b/InfoSphere/src/styles/Footer.css
@@ -2,4 +2,6 @@
     background-color: rgb(213, 167, 97);
     font-size: 2rem;
     text-align: center;
+    color: rgb(44, 33, 75);
+    padding: 2rem;
 }
