--- a/InfoSphere/src/styles/HomePage.css
+++ b/InfoSphere/src/styles/HomePage.css
@@ -2,21 +2,24 @@
     width: 25%;
     background-color: rgb(255, 242, 222);
     border: solid 1px rgb(225, 200, 135); /*quitar luego*/
-    padding: 0 1rem ;
-    margin: 0px;
+    padding: 1rem ;
+    margin: 2px;
 }
 
 .image {
     width: 100%;
     height: 100%;
+    margin: 8px 0;
 }
 
 .article h1{
     font-size: 2.3rem;
+    
 }
 
 .article h1, h2, p{
     text-align: left;
+    color: rgb(29, 22, 49);
 }
 
 .articles {
