--- a/InfoSphere/src/styles/Header.css
+++ b/InfoSphere/src/styles/Header.css
@@ -15,3 +15,24 @@
     color: rgb(44, 33, 75);
     font-weight: bold;
 }
+
+.login-btn {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: right;
+    margin: -11rem 1rem 8.5rem 0;;
+}
+
+.login-btn button {
+    padding: 1rem;
+    font-size: 1.3rem;
+    font-weight: bold;
+    margin: 1px;
+    color: white;
+    cursor: pointer;
+    text-transform: uppercase;
+}
+
+.login-btn button:hover {
+    color: rgb(44, 33, 75);
+}
