Adds NavBar to the homepage if user is auth

--- a/InfoSphere/src/styles/NavBar.css
+++ b/InfoSphere/src/styles/NavBar.css
@@ -1,8 +1,8 @@
 .options {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: right;
-    margin: -11rem 1rem 8.5rem 0;;
+    /* flex-wrap: wrap; */
+    justify-content: left;
+    /* margin: -11rem 1rem 8.5rem 0;; */
 }
 
 .options li {
@@ -10,7 +10,7 @@
     font-size: 1.3rem;
     font-weight: bold;
     margin: 1px;
-    color: white;
+    color: rgb(44, 33, 75);
     cursor: pointer;
     text-transform: uppercase;
 }
