--- a/InfoSphere/src/styles/reset.css
+++ b/InfoSphere/src/styles/reset.css
@@ -46,3 +46,10 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+
+h1, h2, h3, p , label, button {
+	font-family: "Lato", serif;
+	font-weight: 400;
+	/* font-style: italic; */
+  }
