--- a/InfoSphere/src/styles/Header.css
+++ b/InfoSphere/src/styles/Header.css
@@ -1,13 +1,17 @@
 .header {
-    background-color: rgb(20, 26, 100);
+    background-color:#131213;
     display: flex;
     align-items: center;
     height: 30vh;
+    gap: 2rem;
+    cursor: pointer;
 }
 
 .header img {
-    width: 15%;
-  
+    width: 10%; 
+    border-radius: 50%;
+    box-shadow: 0 0 8px 3px rgba(129, 157, 207, 0.8); /* White blurry border */
+    margin-left: 1rem;
 }
 
 .header h1 {
@@ -38,4 +42,10 @@
 
 .login-btn button:hover {
     color: rgb(147, 189, 224);
+}
+
+.font-header {
+    font-family: "Spectral SC", serif;
+    font-weight: 800;
+    font-style: italic;
 }
