styles: changes of color and fonts in footer

--- a/InfoSphere/src/styles/Footer.css
+++ b/InfoSphere/src/styles/Footer.css
@@ -1,6 +1,5 @@
 .footer {
-    background-color:rgb(20, 26, 100);
-    font-size: 2rem;
+    background-color:#131213;
     text-align: center;
     color: rgb(237, 235, 242);
     padding: 2rem;
